stDemoOne/force-app/main/default/objects/xDO_MDC_Custom_Activity__c/xDO_MDC_Custom_Activity__c.object-meta.xml
<CustomObject>
    <label>Custom Activity</label>
    <nameField>
        <label>Custom Activity Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>