stDemoOne/force-app/main/default/objects/xDO_MDC_Custom_Activity__c/fields/xDO_MDC_Contact__c.field-meta.xml
<CustomField>
    <fullName>xDO_MDC_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Custom Activities</relationshipLabel>
    <relationshipName>xDO_MDC_Custom_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>