stDemoOne/force-app/main/default/objects/xDO_MDC_Custom_Activity__c/fields/xDO_MDC_days_ago__c.field-meta.xml
<CustomField>
    <fullName>xDO_MDC_days_ago__c</fullName>
    <description>Number of days in the past that this event occurred relative to today&apos;s date. This allows the activity to show consistently relative to demo date.</description>
    <label>Days Ago</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>