stDemoOne/force-app/main/default/objects/xDO_MDC_Custom_Activity__c/fields/xDO_MDC_Icon_Color__c.field-meta.xml
<CustomField>
    <fullName>xDO_MDC_Icon_Color__c</fullName>
    <description>Hex code for activity icon color</description>
    <inlineHelpText>Hex code for activity icon color</inlineHelpText>
    <label>Icon Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>