stDemoOne/force-app/main/default/objects/xDO_MDC_Custom_Activity__c/fields/xDO_MDC_message__c.field-meta.xml
<CustomField>
    <fullName>xDO_MDC_message__c</fullName>
    <inlineHelpText>Description of activity, displays under title</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>