stDemoOne/force-app/main/default/objects/xDO_MDC_Custom_Activity__c/fields/xDO_MDC_order__c.field-meta.xml
<CustomField>
    <fullName>xDO_MDC_order__c</fullName>
    <description>Sets display order for items where days ago is the same date, will display items in descending order i.e. 3,2,1</description>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>