stDemoOne/force-app/main/default/objects/xDO_MDC_Custom_Activity__c/fields/xDO_MDC_time__c.field-meta.xml
<CustomField>
    <fullName>xDO_MDC_time__c</fullName>
    <description>Time that the activity occurred, suggest entering in &apos;12:00 pm&apos; format</description>
    <label>Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>