stDemoOne/force-app/main/default/objects/xDO_MDC_Custom_Activity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>xDO_MDC_Contact__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>